updated base default

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,7 +9,7 @@
 @import "components/mixins.project.scss";
 
 // other page specific CSS goes below...
-@import "components/index-120416-1.scss" // placeholder
+@import "components/index-120416-1.scss"; // placeholder
 
 // final override to fix anything else
-@import "components/final_override.scss"
+@import "components/final_override.scss";
