--- a/src/sass/components/index-120416-1.scss
+++ b/src/sass/components/index-120416-1.scss
@@ -1,54 +1,39 @@
 /* 
 * main file
 * 
+* we're going to write in standard CSS to avoid confusion for those who don't know SASS
 */
 
-/*================================================
-BENEFITS BANNERS
-=================================================*/
-
-	.benefits-banner {
-		color: white;
-	}
-
-		.benefits-banner-one {}
-
-		.benefits-banner-two {}
-
-		.benefits-banner-three {}
-
-/*================================================
-END BENEFITS BANNERS
-=================================================*/
-
-/*================================================
-BENEFIT TRIPLETS - BENEFITS HIGHLIGHTS
-=================================================*/
-
-.benefits-highlight-one {
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-
-	
+/* Background Example 01 START */
+/* example 
+2 background layers, each positioned differently
+*/
+.background_example_01 {
+	background: url(http://lorempixel.com/400/200) top left /50px 50px no-repeat, url(http://lorempixel.com/400/200) center /50px 50px no-repeat;
+	border: solid blue 2px;
 }
+.background_example_01 .wrapper {
+	width:100%;
+	height: 15em;
+	@include flexboxColumn1;
+}
+/* Background Example 01 END */
 
-/*================================================
-END BENEFIT TRIPLETS - BENEFITS HIGHLIGHTS
-=================================================*/
+/* Background Example 02 START */
+/* example
+background layers, stacking
 
-/*================================================
-MODULES & BONUSES
-=================================================*/
-
-	.module-desc h3, .bonus-desc h3 {
-		text-transform: uppercase;
-		color: #ee5730; /* flamingo */
-		text-align: left;
-	}
-
-/*================================================
-END MODULES & BONUSES
-=================================================*/
+https://code-gale-online.s3.amazonaws.com/graphics/cgo_blog/bluesplatter_210819.png
+https://code-gale-online.s3.amazonaws.com/graphics/cgo_blog/plate_4941215.png
+*/
+.background_example_02 {
+	background: url('https://code-gale-online.s3.amazonaws.com/graphics/cgo_blog/plate_4941215.png') left /100px 100px no-repeat,
+	    url('https://code-gale-online.s3.amazonaws.com/graphics/cgo_blog/bluesplatter_210819.png') center/250px 125px no-repeat; 
+	border: solid purple 2px;
+}
+.background_example_02 .wrapper {
+	width:100%;
+	height: 20em;
+	@include flexboxColumn1;
+}
+/* Background Example 02 END */
