--- a/src/sass/components/_base.scss
+++ b/src/sass/components/_base.scss
@@ -15,3 +15,10 @@ select,
 button {
 	font: inherit;
 }
+
+/*
+ensure border box and box sizing fix
+*/
+*, *:before, *:after {
+  -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+ }
