--- a/src/sass/components/index-120416-1.scss
+++ b/src/sass/components/index-120416-1.scss
@@ -8,6 +8,7 @@
 	width:100%;
 	height: 15em;
 	@include flexboxColumn1;
+	padding: 1em;
 }
 
 /* Background Example 01 START */
@@ -18,11 +19,7 @@
 	background: url(http://lorempixel.com/400/200) top left /50px 50px no-repeat, url(http://lorempixel.com/400/200) center /50px 50px no-repeat;
 	border: solid blue 2px;
 }
-.background_example_01 .wrapper {
-	// width:100%;
-	// height: 15em;
-	// @include flexboxColumn1;
-}
+
 /* Background Example 01 END */
 
 /* Background Example 02 START */
@@ -37,11 +34,7 @@ https://code-gale-online.s3.amazonaws.com/graphics/cgo_blog/plate_4941215.png
 	    url('https://code-gale-online.s3.amazonaws.com/graphics/cgo_blog/bluesplatter_210819.png') center/250px 125px no-repeat; 
 	border: solid purple 2px;
 }
-.background_example_02 .wrapper {
-	// width:100%;
-	// height: 20em;
-	// @include flexboxColumn1;
-}
+
 /* Background Example 02 END */
 
 /* Background Example 03 START */
@@ -56,3 +49,39 @@ using pictures
 }
 /* Background Example 03 END */
 
+/* Background Example 04 START */
+/* solid colours
+using a linear gradient and 2 identical colours
+ */
+.background_example_04 {
+	background: linear-gradient(blue,blue);
+}
+
+.background_example_04 p {
+	color: white;
+}
+/* Background Example 04 END */
+
+/* Background Example 05 START */
+/* hero section overlay use case */
+.background_example_05 {
+	background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),
+		url('http://lorempixel.com/1280/720') center /cover;
+}
+
+.background_example_05 h2, .background_example_05 h3 {
+	color: white;
+}
+/* Background Example 05 END */
+
+/* Background Example 06 START */
+/* hero section overlay */
+.background_example_06 {
+	background: linear-gradient(135deg,rgba(180,255,90,0.5),rgba(180,255,90,0.5)),
+		url('http://lorempixel.com/1280/720') center /cover;
+}
+
+.background_example_06 h2, .background_example_06 h3 {
+	color: blue;
+}
+/* Background Example 06 END */
