--- a/src/sass/components/index-120416-1.scss
+++ b/src/sass/components/index-120416-1.scss
@@ -69,7 +69,7 @@ using a linear gradient and 2 identical colours
 		url('http://lorempixel.com/1280/720') center /cover;
 }
 
-.background_example_05 h2, .background_example_05 h3 {
+.background_example_05 h2, .background_example_05 h3, .background_example_05 p {
 	color: white;
 }
 /* Background Example 05 END */
@@ -81,7 +81,20 @@ using a linear gradient and 2 identical colours
 		url('http://lorempixel.com/1280/720') center /cover;
 }
 
-.background_example_06 h2, .background_example_06 h3 {
+.background_example_06 h2, .background_example_06 h3, .background_example_06 p {
 	color: blue;
 }
 /* Background Example 06 END */
+
+/* Background Example 07 START */
+/* blending backgrounds */
+.background_example_07 {
+	background: linear-gradient(#000,#000),
+		url('http://lorempixel.com/1280/960') center/cover;
+	background-blend-mode: color;
+}
+
+.background_example_07 h2, .background_example_07 h3, .background_example_07 p {
+	color: white;
+}
+/* Background Example 07 END */
