--- a/src/sass/components/index-120416-1.scss
+++ b/src/sass/components/index-120416-1.scss
@@ -48,7 +48,7 @@ also see example 07
 
 /* Background Example 02 START */
 /* example
-background layers, stacking
+background layers, stacking before
 
 https://code-gale-online.s3.amazonaws.com/graphics/cgo_blog/bluesplatter_210819.png
 https://code-gale-online.s3.amazonaws.com/graphics/cgo_blog/plate_4941215.png
@@ -62,7 +62,7 @@ https://code-gale-online.s3.amazonaws.com/graphics/cgo_blog/plate_4941215.png
 /* Background Example 02 END */
 
 /* Background Example 03 START */
-/* stacking order 
+/* stacking order, after case
 using pictures
 */
 .background_example_03 {
